2010-12-23  W. James MacLean  <wjmaclean@chromium.org>

        Reviewed by Kenneth Russell.

        [chromium] Add asserts to test for contiguous-pixel Skia bitmaps.
        https://bugs.webkit.org/show_bug.cgi?id=51186

        No new tests. Behaviour not changed, but need the asserts to detect when assumptions violated.

        * platform/graphics/chromium/ImageLayerChromium.cpp:
        (WebCore::ImageLayerChromium::updateContentsIfDirty):
        * platform/graphics/skia/GraphicsContext3DSkia.cpp:
        (WebCore::GraphicsContext3D::getImageData):

2010-12-23  Lucas De Marchi  <lucas.demarchi@profusion.mobi>

        Reviewed by Kenneth Rohde Christiansen.

        Fix check by undefined macro
        https://bugs.webkit.org/show_bug.cgi?id=51531

        Fix check by undefined macro

        When building EFL port with libsoup, BUILDING_GTK__ is not defined,
        leading to warnings during compile. We actually have to use an #ifdef
        instead of an #if.

        No change in functionality so no new tests.

        * platform/network/soup/cache/webkit/soup-cache.h:

2010-12-23  Jonathan Dixon  <joth@chromium.org>

        Reviewed by Steve Block.

        TouchEvents does not support multi-touch on a page with multiple touch targets
        https://bugs.webkit.org/show_bug.cgi?id=51258

        Test: fast/events/touch/multi-touch-grouped-targets.html

        * page/EventHandler.cpp:
        (WebCore::eventNameForTouchPointState):
        (WebCore::EventHandler::handleTouchEvent):
        Redesigned event handler to ensure all event targets involved in a given
        multitouch event get the appropriate event(s) fired.

        * platform/PlatformTouchPoint.h: Added end-stop marker for State enum.

2010-12-23  Philippe Normand  <pnormand@igalia.com>

        Reviewed by Xan Lopez.

        [GTK] media/audio-data-url.html fails since r75504
        https://bugs.webkit.org/show_bug.cgi?id=51525
